[project]
name = "spaceship-prediction"
version = "0.1.0"
description = ""
authors = [
    {name = "Matas Zukas",email = "matasz89@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "shap (>=0.48.0,<0.49.0)",
    "feature-engine (>=1.9.3,<2.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "autoviz (>=0.1.905,<0.2.0)",
    "dask (>=2025.9.0,<2026.0.0)",
    "sweetviz (>=2.3.1,<3.0.0)",
    "missingno (>=0.5.2,<0.6.0)",
    "phik (>=0.12.5,<0.13.0)",
    "autogluon-tabular (>=1.4.0,<2.0.0)",
    "missingpy (>=0.2.0,<0.3.0)",
    "pyampute (>=0.0.3,<0.0.4)",
    "category-encoders (>=2.8.1,<3.0.0)",
    "yfinance (>=0.2.66,<0.3.0)",
    "interpret (>=0.7.2,<0.8.0)",
    "eli5 (>=0.16.0,<0.17.0)",
    "google (>=3.0.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
